<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="MedidaTempPuente" Id="{d3f6de43-3b57-4ce0-885a-f730bb311d29}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MedidaTempPuente
VAR
	VampT:REAL;
	VampB:REAL;
	VAT:REAL;
	VAB:REAL;
	VB:REAL;
	Rpt100T:REAL;
	Rpt100B:REAL;
	TempTerT: INT;
	TempTerB: INT;
	Gain:REAL;
	
	//Variables media de medidas de temperatura
	LecturasT:ARRAY[0..9] OF REAL:=[10(0.0)];
	IndexT:INT:=0; 			//Indice del vector de medidas 
	SumaT:REAL:=0.0; 		//Suma de medidas
	MedidaT:REAL:=0.0; 		//Media de medidas y por tanto medida de la temperatura
	LecturasB:ARRAY[0..9] OF REAL:=[10(0.0)];
	IndexB:INT:=0; 			//Indice del vector de medidas 
	SumaB:REAL:=0.0; 		//Suma de medidas
	MedidaB:REAL:=0.0; 		//Media de medidas y por tanto medida de la temperatura
END_VAR

VAR CONSTANT
	Vcc:REAL:=10.0;
	R1:REAL:=9400;
	R0:REAL:=101.1;
	Rg:REAL:=983;
	A:LREAL:=3.9083*EXPT(10,-3);
	B:LREAL:=-5.775*EXPT(10,-7);
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[VB:=(R0*Vcc)/(R1+R0);
Gain:=1.0+(100000.0/Rg);

//Calculo de la temperatura del termico superior
VampT:=((ABS(IO.I_TermTPuente))*Vcc)/32767;

//Hacer media de las 10 ultimas medidas de la temperatura
SumaT:= SumaT - LecturasT[IndexT];
LecturasT[IndexT]:=VampT;
SumaT:=SumaT+LecturasT[IndexT];
IndexT:= IndexT + 1;
IF (IndexT > 9) THEN
	IndexT := 0;    //Volvemos al inicio del vector
END_IF
MedidaT:=SumaT/10;
	
VAT:=(MedidaT/Gain)+VB;
Rpt100T:=(R1)/((Vcc/VAT)-1);
GVL.TempTerT:=(-A+SQRT(A*A-4*B*(1-(Rpt100T/R0))))/(2*B);


//Calculo de la temperatura del termico inferior
VampB:=((ABS(IO.I_TermBPuente))*Vcc)/32767;

//Hacer media de las 10 ultimas medidas de la temperatura
SumaB:= SumaB - LecturasB[IndexB];
LecturasB[IndexB]:=VampB;
SumaB:=SumaB+LecturasB[IndexB];
IndexB:= IndexB + 1;
IF (IndexB > 9) THEN
	IndexB := 0;    //Volvemos al inicio del vector
END_IF
MedidaB:=SumaB/10;

VAB:=(MedidaB/Gain)+VB;
Rpt100B:=(R1)/((Vcc/VAB)-1);
GVL.TempTerB:=(-A+SQRT(A*A-4*B*(1-(Rpt100B/R0))))/(2*B);]]></ST>
    </Implementation>
    <LineIds Name="MedidaTempPuente">
      <LineId Id="207" Count="35" />
      <LineId Id="41" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>